--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -1,28 +1,22 @@
-{% extends 'base.html' %}
+{% extends 'base.html'  %}
+
 {% block content %}
 
-<h1>Finch List</h1>
+<h1>Finch Details</h1>
 
-{% for finch in finches %}
-    <div class="card">
+<div class="card">
+    <div class="card-content">
         <a href="{% url 'detail' finch.id %}">
-            <div class="card-content">
-                <span class="card-title">{{ finch.name }}</span>
-                <p>Breed: {{ finch.breed }}</p>
-                <p>Description: {{ finch.description }}</p>
-                {% if finch.age > 0 %}
-                
-                <p>Age: {{ finch.age }}</p>
-                
-                {% else %}
-                
-                <p>Age: cutie</p>
-                
-                {% endif %}
-            </div>
-        </a>
+        <span class='card-title'>{{ finch.name }}</span>
+        <p>Breed: {{ finch.breed }}</p>
+        <p>Description: {{ finch.description }}</p>
+        {% if finch.age > 0 %}
+            <p>Age: {{ finch.age }} </p>
+        {% else %}
+            <p>Age: Cutie</p>
+        {% endif %}
     </div>
+</div>
 
-    {% endfor %}
 
 {% endblock %}
