--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Finch Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static '/css/style1.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
@@ -21,11 +22,8 @@
         <ul class="right">
 
             <li><a href="/about">About</a></li>
-
-
-            <!-- new markup below -->
+            <li><a href="{% url 'finches_create'%}">Add a Finch</a></li>
             <li><a href="/finches">View All My Finches</a></li>
-
 
         </ul>
       </div>
