--- a/main_app/static/css/style1.css
+++ b/main_app/static/css/style1.css
@@ -10,7 +10,7 @@ body {
   
   footer.page-footer {
     padding-top: 0;
-    text-align: center;
+    text-align: right;
     background-color: skyblue;
   }
 
