--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -1,62 +1,62 @@
-{% extends 'base.html'  %}
-
+{% extends 'base.html' %}
 {% block content %}
 
 <h1>Finch Details</h1>
 
-<div class="card">
-    <div class="card-content">
-        <a href="{% url 'detail' finch.id %}">
-        <span class='card-title'>{{ finch.name }}</span>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ finch.name }}</span>
         <p>Breed: {{ finch.breed }}</p>
         <p>Description: {{ finch.description }}</p>
         {% if finch.age > 0 %}
-            <p>Age: {{ finch.age }} </p>
+          <p>Age: {{ finch.age }}</p>
         {% else %}
-            <p>Age: Cutie</p>
+          <p>Age: Cutie</p>
         {% endif %}
-    </div>
-    <div classs="card-action">
+      </div>
+      <div class="card-action">
         <a href="{% url 'finches_update' finch.id %}">Edit</a>
         <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+      </div>
     </div>
+    <!-- new code below -->
+    <form method="post" action="{% url 'add_feeding' finch.id %}">
+      {% csrf_token %}
+      {{ feeding_form.as_p }}
+      <input type="submit" class="btn" value="Add Feeding">
+    </form>
     
-    <div class="col s6">
-        <div class="col s6">
-            <!-- new code below -->
-            <form method="post" action="{% url 'add_feeding' finch.id %}">
-              {% csrf_token %}
-              {{ feeding_form.as_p }}
-              <input type="submit" class="btn" value="Add Feeding">
-            </form>
-        <table class="striped">
-            <thead>
-                <tr><th>Date</th><th>Meal</th></tr>
-            </thead>
-            <tbody>
-                {% for feeding in finch.feeding_set.all %}
-                <tr>
-                    <td>{{ feeding.date }}</td>
-                    <td>{{ feeding.get_meal_display }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
-
-<script>
+    <script>
     var dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
     format: 'yyyy-mm-dd',
     defaultDate: new Date(),
     setDefaultDate: true,
     autoClose: true
-  });
-
-   // add additional JS to initialize select below
-   var selectEl = document.getElementById('id_meal');
-   M.FormSelect.init(selectEl);
-</script>
+    });
     
+    // add additional JS to initialize select below
+    var selectEl = document.getElementById('id_meal');
+    M.FormSelect.init(selectEl);
+    </script>
+  </div>
+  <div class="col s6">
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Meal</th></tr>
+      </thead>
+      <tbody>
+        {% for feeding in finch.feeding_set.all %}
+          <tr>
+            <td>{{feeding.date}}</td>
+            <td>{{feeding.get_meal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
 {% endblock %}
+        
